# Crypto

./: .env.example  .gitignore  CHANGES.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SUPERSET.md  alembic.ini  docker-compose-superset.yml  docker-compose.dev.yml  docker-compose.old.dev.yml  docker-compose.old.yml  docker-compose.yml  docker-entrypoint.sh  init-data.sql  project.mdc  pyproject.toml  run.py  Лабораторная_работа_№1_Отчет.md
alembic/: env.py
alembic/versions/: 0e6c9264ac14_initial.py  d693b33f0e20_add_new_fields.py
app/: main.py  scheduler.py
app/controllers/: crypto_controller.py  data_controller.py  defi_controller.py  lab2_controller.py  lab3_controller.py  lab4_controller.py  web_controller.py
app/core/: config.py  database.py
app/mappers/: __init__.py  cryptocurrency_mapper.py  defi_protocol_mapper.py  market_data_mapper.py  price_history_mapper.py  tvl_history_mapper.py
app/models/: __init__.py  base.py  crypto.py  cryptocurrency.py  defi_protocol.py  lab2_cache.py  market_data.py  price_history.py  tvl_history.py
app/repositories/: __init__.py  base_repository.py  crypto_repository.py  defi_repository.py  filterable_repository.py  lab2_cache_repository.py  market_data_repository.py  price_history_repository.py  searchable_repository.py  tvl_history_repository.py
app/schemas/: crypto_schemas.py  defi_schemas.py
app/services/: batch_processor.py  data_fetcher.py  lab2_data_service.py  lab3_approximation_service.py
app/templates/: analytics.html  base.html  (+4 more)
docker/: clickhouse-config.xml  config.xml  nginx.conf  users.xml
(+20 files in other folders)
